<?xml version="1.0"?>
<project
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
	xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
	<modelVersion>4.0.0</modelVersion>

	<parent>
		<groupId>org.mobicents.tools</groupId>
		<artifactId>sip-balancer</artifactId>
		<version>7.0.3-TelScale-SNAPSHOT</version>
	</parent>

	<groupId>org.mobicents.tools</groupId>
	<artifactId>telestax-proxy</artifactId>
	<version>7.0.3-TelScale-SNAPSHOT</version>
	<name>telestax-proxy</name>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>

	<dependencies>
		<dependency>
			<groupId>org.mobicents.tools</groupId>
			<version>${project.version}</version>
			<artifactId>sip-balancer-jar-no-lce</artifactId>
		</dependency>
		<dependency>
			<groupId>com.thoughtworks.xstream</groupId>
			<artifactId>xstream</artifactId>
			<version>1.4.7</version>
		</dependency>
		<!-- <dependency> <groupId>org.apache.httpcomponents</groupId> <artifactId>httpclient</artifactId> 
			<version>4.3.5</version> <scope>test</scope> </dependency> -->
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.11</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>com.github.tomakehurst</groupId>
			<artifactId>wiremock</artifactId>
			<version>1.47</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>xmlunit</groupId>
			<artifactId>xmlunit</artifactId>
			<version>1.3</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<artifactId>mss-arquillian-utilities-extension</artifactId>
			<groupId>org.mobicents.arquillian.container</groupId>
			<version>7.0.0.CR2-TelScale-SNAPSHOT</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.cafesip.sipunit</groupId>
			<artifactId>sipunit</artifactId>
			<version>2.0.0</version>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<configuration>
					<archive>
						<manifest>
							<mainClass>
								org.mobicents.tools.sip.balancer.nolce.BalancerRunner
							</mainClass>
							<addClasspath>true</addClasspath>
						</manifest>
						<manifestEntries>
							<Implementation-Title>
								${manifest.implementation.title}
							</Implementation-Title>
							<Implementation-Version>
								${manifest.implementation.version}
							</Implementation-Version>
							<Implementation-Vendor-Id>
								${manifest.implementation.vendor}
							</Implementation-Vendor-Id>
							<Implementation-URL>
								${manifest.url}
							</Implementation-URL>
						</manifestEntries>
					</archive>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-assembly-plugin</artifactId>
				<configuration>
					<archive>
						<manifest>
							<mainClass>
								org.mobicents.tools.sip.balancer.nolce.BalancerRunner
							</mainClass>
						</manifest>
						<manifestEntries>
							<Implementation-Title>
								${manifest.implementation.title}
							</Implementation-Title>
							<Implementation-Version>
								${manifest.implementation.version}
							</Implementation-Version>
							<Implementation-Vendor-Id>
								${manifest.implementation.vendor}
							</Implementation-Vendor-Id>
							<Implementation-URL>
								${manifest.url}
							</Implementation-URL>
						</manifestEntries>
					</archive>
					<descriptors>
						<descriptor>src/main/assembly/src.xml
						</descriptor>
					</descriptors>
				</configuration>
				<executions>
					<execution>
						<id>make-assembly</id>
						<!-- this is used for inheritance merges -->
						<phase>package</phase>
						<!-- append to the packaging phase. -->
						<goals>
							<goal>attached</goal><!-- goals == mojos -->
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<compilerArguments>
						<g />
					</compilerArguments>
					<source>1.6</source>
					<target>1.6</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-eclipse-plugin</artifactId>
				<version>2.8</version>
				<configuration>
					<useProjectReferences>false</useProjectReferences>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.12.4</version>
				<configuration>
					<argLine>-Xms512m -Xmx1024m -XX:MaxPermSize=1024m</argLine>
				</configuration>
			</plugin>
		</plugins>
	</build>
	<repositories>
		<repository>
			<id>wso2-repository-group</id>
			<name>Wso2 Public Maven Repository Group</name>
			<url>http://dist.wso2.org/maven2</url>
			<layout>default</layout>
			<releases>
				<enabled>true</enabled>
				<updatePolicy>never</updatePolicy>
			</releases>
			<snapshots>
				<enabled>true</enabled>
				<updatePolicy>never</updatePolicy>
			</snapshots>
		</repository>
		<repository>
			<id>telscale-releases-repository</id>
			<name>TelScale Releases Repository</name>
			<url>http://telestax.artifactoryonline.com/telestax/releases</url>
			<releases>
				<enabled>true</enabled>
				<updatePolicy>never</updatePolicy>
			</releases>
			<snapshots>
				<enabled>false</enabled>
				<updatePolicy>never</updatePolicy>
			</snapshots>
		</repository>
		<repository>
			<id>telscale-snapshots-repository</id>
			<name>TelScale Snapshots Repository</name>
			<url>http://telestax.artifactoryonline.com/telestax/snapshots</url>
			<releases>
				<enabled>false</enabled>
				<updatePolicy>never</updatePolicy>
			</releases>
			<snapshots>
				<enabled>true</enabled>
				<updatePolicy>never</updatePolicy>
			</snapshots>
		</repository>
	</repositories>
</project>
